frontend/src/components/singlepost.module.css
.blockImage {
    width: 4rem;
    vertical-align: top;
}

.img {
    vertical-align: unset!important;
    border-radius: 50%;
}

.blockContent {
    width: 100%;
    vertical-align: top;
}

.blockFlexContent {
    display: flex;
}

.overflow {
    display: flex;
    background-color: black;
    border-bottom: 1px solid gray;
    padding-right: 0.5rem;
}

.topText {
    font-size: 15px;
    color: white;
    height: 23px;
}

.topBottom {
    font-size: 15px;
    color: white;
    text-align: left;
}

.topUserText {
    color: rgb(113, 118, 123)!important;
}

.topLeft {
    float: left;
}
.topRight {
    float: right;
}

.inlineBlock {
    display: inline-block;
    padding-right: 0.3rem;
}

.flexContainer {
    display: flex;
    justify-content: flex-start;
    font-size: 16px;
    color: rgb(113, 118, 123);
  }
  
  .flexContainer::before {
    content: "";
  }
  
  .flexContainer::after {
    content: "";
  }

.flexItem {
    height: 30px;
    width: 75px;
    margin-right: 1%;
    text-align: left;
  }
  .flexItem2 {
    height: 30px;
    width: 75px;
    text-align: right;
  }  
  .separator{
    flex-grow:1;
  }
  

